unfutzing the stats template

--- a/templates/twig/supremm/stats.html.twig
+++ b/templates/twig/supremm/stats.html.twig
@@ -19,7 +19,7 @@
 <body>
 <div id="loading"><img src="/gui/images/loading.gif"></img>Loading</div>
 <div>
-    <form id="resourceform" action="." method="get">
+    <form id="resourceform" action=".." method="get">
         <select name="resourceid" id="resourceselect"> </select>
         <input type="submit" id="resourcesubmit" value="Show stats" name="showstats"/>
     </form>
