fixing paths in stats.html.twig

--- a/templates/twig/supremm/stats.html.twig
+++ b/templates/twig/supremm/stats.html.twig
@@ -5,15 +5,15 @@
     <title>Job timeseries demo</title>
     <script type="text/javascript"
             src="/gui/lib/node_modules/@jsplumb/browser-ui/js/jsplumb.browser-ui.umd.js"></script>
-    <script type="text/javascript" src="{{ extjs_path }}/{{ extjs_version }}/adapter/ext/ext-base.js"></script>
-    <script type="text/javascript" src="{{ extjs_path }}/{{ extjs_version }}/ext-all-debug.js"></script>
+    <script type="text/javascript" src="/{{ extjs_path }}/{{ extjs_version }}/adapter/ext/ext-base.js"></script>
+    <script type="text/javascript" src="/{{ extjs_path }}/{{ extjs_version }}/ext-all-debug.js"></script>
     <script type="text/javascript">
         Ext.namespace('XDMoD.REST');
         XDMoD.REST.token = '{{ rest_token }}';
         XDMoD.REST.url = '{{ rest_url }}';
     </script>
 
-    <script type="text/javascript" src="/gui/js/dashboard/stats.js"></script>
+    <script type="text/javascript" src="/gui/js/dashboard/supremm/stats.js"></script>
     <link rel="stylesheet" href="/gui/css/dashboard/supremm/style.css" type="text/css"/>
 </head>
 <body>
